--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,6 +24,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Compile solution
+        run: javac solutions/PrioritytyQueue.java
+        run: javac solutions/TransactionDetails.java
         run: javac solutions/Payment.java
       - name: Test 1
         run: time bash tasks/payment/run.sh
