--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,11 +24,10 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Compile solution
-        run: javac solutions/TransactionDetails.java
-      - name: Compile solution
-        run: javac solutions/PriorityQueue.java
-      - name: Compile solution
-        run: javac solutions/Payment.java
+        run: 
+          javac solutions/TransactionDetails.java
+          javac solutions/PriorityQueue.java
+          javac solutions/Payment.java
       - name: Test 1
         run: time bash tasks/payment/run.sh
       - name: Test 2
